Rejigger WKWebArchive headers. https://bugs.webkit.org/show_bug.cgi?id=203648

Reviewed by Andy Estes.

* Shared/API/c/mac/WKWebArchiveRef.cpp: Renamed from Source/WebKit/Shared/API/c/mac/WKWebArchive.cpp.
(WKWebArchiveGetTypeID):
(WKWebArchiveCreate):
(WKWebArchiveCreateWithData):
(WKWebArchiveCreateFromRange):
(WKWebArchiveCopyMainResource):
(WKWebArchiveCopySubresources):
(WKWebArchiveCopySubframeArchives):
(WKWebArchiveCopyData):
* Shared/API/c/mac/WKWebArchiveRef.h: Copied from Source/WebKit/Shared/API/c/mac/WKWebArchive.h.
* SourcesCocoa.txt:
* UIProcess/API/Cocoa/WKWebArchive.h: Renamed from Source/WebKit/Shared/API/c/mac/WKWebArchive.h.
* WebKit.xcodeproj/project.pbxproj:


Canonical link: https://commits.webkit.org/217120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251952 268f45cc-cd09-0410-ab3c-d52691b4dbfc